--- a/language/en.json
+++ b/language/en.json
@@ -54,6 +54,10 @@
     "totalSpace"       :  "TOTAL SPACE",
     "modify"           :  "Modify",
     "creditCard"       :  "Credit card",
+    "creditcardError"  :  "Credit card error",
+    "paymentError"     :  "The payment could not be made, contact us.",
+    "errorRemoveCard"  :  "Fail to delete card, please contact us.",
+    "changePlanError"  :  "Fail to change plans, please contact us.",
     "inevioCredit"     :  "Inevio credit",
     "delete"           :  "Delete",
     "extra"            :  " GB Extra",
