--- a/language/es.json
+++ b/language/es.json
@@ -54,6 +54,10 @@
     "totalSpace"       :  "ESPACIO TOTAL",
     "modify"           :  "Modificar",
     "creditCard"       :  "Tarjeta de crédito",
+    "creditcardError"  :  "Error en la tarjeta de crédito",
+    "paymentError"     :  "No se ha podido realizar el pago, ponte en contacto con nosotros.",
+    "errorRemoveCard"  :  "Error al borrar la tarjeta, por favor contactca con nosotros.",
+    "changePlanError"  :  "Error al cambiar el plan, por favor contacta con nosotros.",
     "inevioCredit"     :  "Crédito de Inevio",
     "delete"           :  "Eliminar",
     "extra"            :  " GB Extra",
