--- a/language/es.json
+++ b/language/es.json
@@ -190,6 +190,13 @@
     "paymentCardCVV"    : "CVV",
     "creditcardError"   : "La tarjeta introducida no es válida",
     "unlinkCard"        : "Desvincular esta tarjeta",
-    "stripeLoading"     : "Conectando con el proveedor de pagos..."
+    "stripeLoading"     : "Conectando con el proveedor de pagos...",
+
+    "inviteYourFriends" : "Invita a todos tus colegas",
+    "feelAlone"         : "Si te sientes muy solo en horbito date un poco de vida e invita a todos los que conozcas!! Así podrás compartir archivos y colaborar etc...",
+    "emails"            : "Emails",
+    "addMail"           : "+ Añadir más correos",
+    "sendInvitations"   : "Enviar invitaciones",
+    "mailExample"       : "ejemplo@mail.com"
 
 }
