--- a/language/es.json
+++ b/language/es.json
@@ -192,11 +192,13 @@
     "unlinkCard"        : "Desvincular esta tarjeta",
     "stripeLoading"     : "Conectando con el proveedor de pagos...",
 
-    "inviteYourFriends" : "Invita a todos tus colegas",
-    "feelAlone"         : "Si te sientes muy solo en horbito date un poco de vida e invita a todos los que conozcas!! Así podrás compartir archivos y colaborar etc...",
-    "emails"            : "Emails",
+    "inviteYourFriends" : "Invita a todos tus contactos",
+    "feelAlone"         : "Si te sientes muy solo en horbito, empieza ya a invitar a todos tus contactos! Cuando se unan podréis compartir archivos, colaborar, uniros a mundos...",
+    "emails"            : "Correos",
     "addMail"           : "+ Añadir más correos",
     "sendInvitations"   : "Enviar invitaciones",
-    "mailExample"       : "ejemplo@mail.com"
+    "mailExample"       : "ejemplo@mail.com",
+    "invitationSentTitle"    : "Invitaciones enviadas", 
+    "invitationSentSubtitle" : "Tus invitaciones están de camino!"
 
 }
