--- a/language/en.json
+++ b/language/en.json
@@ -287,6 +287,13 @@
         "Events created",
         "Notes, links or videos posted"
 
-    ]
+    ],
+ 
+    "inviteYourFriends" : "Invite all your friends",
+    "feelAlone"         : "If you feel alone in horbito, start now inviting all your friends! Then you can share files, collaborate etc...",
+    "emails"            : "Emails",
+    "addMail"           : "+ Add more mails",
+    "sendInvitations"   : "Send invitations",
+    "mailExample"       : "example@mail.com"
 
 }
