Update new preferences

--- a/language/en.json
+++ b/language/en.json
@@ -50,6 +50,8 @@
     "usedSpace"        :  "Used space",
     "activePlan"       :  "Active plan",
     "moreInfo"         :  "More info",
+    "needMoreSpace"    :  "Need more space?",
+    "priceExtra"       :  "extra for just $1/mo",
     "manage"           :  "Manage",
     "increaseStorage"  :  "Increase your storage",
     "currentPlan"      :  "Actual plan",
@@ -146,12 +148,30 @@
     "accountUser"        : "Username",
     "accountMailUser"    : "Email",
     "changePassword"     : "Password",
+    "incorrectPass"      : "Incorrect password",
     "deleteAccount"      : "Delete account",
     "saveChanges"        : "Save Changes",
     "usernameChanged"    : "Username changed",
     "usernameChanged2"   : "Your username has been changed to",
     "mailChanged"        : "Mail changed",
     "mailChanged2"       : "Your mail has been changed to",
+    "nameChanged"        : "Name changed",
+    "nameChanged2"       :"Your name has been changed to",
+
+    "currentUsername"    :  "Current username",
+    "newUsername"        :  "New username",
+    "repeatNewUsername"  :  "Repeat the new username",
+    "currentPassword"    :  "Current password",
+    "newPassword"        :  "New password",
+    "repeatNewPassword"  :  "Repeat the new password",
+    "currentEmail"       :  "Current mail",
+    "newEmail"           :  "New mail",
+    "repeatNewEmail"     :  "Repeat the new mail",
+    "accountSetting"     :  "Account settings",
+
+    "changeName"           : "Change name",
+    "name"                 :  "Name",
+    "surname"              :  "Surname",
 
     "passwordTitle"       : "YOUR PASSWORD",
     "passwordDescription" : "Here you can change your password or recover it.",
