--- a/language/es.json
+++ b/language/es.json
@@ -49,7 +49,9 @@
 
     "usedSpace"        :  "Espacio usado",
     "activePlan"       :  "Plan activo",
-    "moreInfo"         :  "Mas información",
+    "moreInfo"         :  "Mas info",
+    "needMoreSpace"    :  "¿Necesitas mas espacio?",
+    "priceExtra"       :  "extra por solo 1$/mes",
     "manage"           :  "Gestionar",
     "increaseStorage"  :  "Aumenta tu espacio",
     "currentPlan"      :  "Plan actual",
@@ -149,12 +151,30 @@
     "accountUser"        : "Usuario",
     "accountMailUser"    : "Correo",
     "changePassword"     : "Contraseña",
+    "incorrectPass"      : "Contraseña incorrecta",
     "deleteAccount"      : "Borrar cuenta",
     "saveChanges"        : "Guardar Cambios",
     "usernameChanged"    : "Nombre de usuario cambiado",
     "usernameChanged2"   : "Tu nombre de usuario ha sido cambiado por",
     "mailChanged"        : "Correo cambiado",
     "mailChanged2"       : "Tu cuenta de correo ha sido cambiada por",
+    "nameChanged"        : "Nombre cambiado",
+    "nameChanged2"       :"Tu nombre ha sido cambiado por",
+
+    "currentUsername"    :  "Nombre de usuario actual",
+    "newUsername"        :  "Nuevo nombre de usuario",
+    "repeatNewUsername"  :  "Repita el nombre de usuario",
+    "currentPassword"    :  "Contraseña actual",
+    "newPassword"        :  "Nueva contraseña",
+    "repeatNewPassword"  :  "Repita la contraseña",
+    "currentEmail"       :  "Correo actual",
+    "newEmail"           :  "Nuevo correo",
+    "repeatNewEmail"     :  "Repita el correo",
+    "accountSetting"     :  "Ajustes de la cuenta",
+
+  "changeName"           : "Cambiar nombre",
+  "name"                 :  "Nombre",
+  "surname"              :  "Apellidos",
 
     "passwordTitle"       : "TU CONTRASEÑA",
     "passwordDescription" : "Aquí puedes cambiar tu contraseña o recuperarla.",
