--- a/language/en.json
+++ b/language/en.json
@@ -339,7 +339,13 @@
     "sendInvitations"   : "Send invitations",
     "mailExample"       : "example@mail.com",
     "invitationSentTitle"    : "Invitations sent",
-    "invitationSentSubtitle" : "Your invitations are on their way!"
+    "invitationSentSubtitle" : "Your invitations are on their way!",
+
+    "errors" : {
+        "usedMail"      : "The new email address you've introduced is already being used. If you forgot your password just click on 'Forgot?' in the login page.",
+        "usedUsername"  : "The new username you've introduced is already being used. Please try with a different username.",
+        "wrongPassword" : "The current password you've introduced is incorrect. Please try again."
+    }
 
 
 }
