--- a/language/es.json
+++ b/language/es.json
@@ -342,6 +342,12 @@
     "sendInvitations"   : "Enviar invitaciones",
     "mailExample"       : "ejemplo@mail.com",
     "invitationSentTitle"    : "Invitaciones enviadas",
-    "invitationSentSubtitle" : "Tus invitaciones están de camino!"
+    "invitationSentSubtitle" : "Tus invitaciones están de camino!",
+
+    "errors" : {
+        "usedMail"      : "El nuevo correo que has introducido ya está en uso. Si no recuerdas la contraseña, simplemente haz click en 'Recuperar' en la pantalla de login.",
+        "usedUsername"  : "El nuevo nombre de usuario que has introducido ya está en uso. Por favor prueba con otro usuario diferente.",
+        "wrongPassword" : "La contraseña actual que has introducido es incorrecta. Por favor vuelve a intentarlo."
+    }
 
 }
